--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
         with:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
-            az containerapp registry set -n demo-container -g demo-container --server hdprac.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
-            az containerapp update -n demo-container -g demo-container --cpu 2 --memory 4Gi
-            az containerapp update -n demo-container -g demo-container --image hdprac.azurecr.io/hdprac/huggingface-azure-acr:${{ github.sha }}
+            az containerapp registry set -n hdprac -g hdprac --server hdprac.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+            az containerapp update -n hdprac -g hdprac --cpu 2 --memory 4Gi
+            az containerapp update -n hdprac -g hdprac --image hdprac.azurecr.io/hdprac/huggingface-azure-acr:${{ github.sha }}
